# JaxOS

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  basic_panic.rs  divide_by_zero.rs
