[package]
name = "rust_os"
version = "1.0.0"
authors = ["Jackson Isenberg <jisenberg1050@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
rlibc = "1.0.0"
volatile = "0.3.0"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]