[package]
name = "jax_os"
version = "1.0.0"
authors = ["Jackson Isenberg <jisenberg1050@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.10", features = ["map_physical_memory"]}
rlibc = "1.0.0"
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.8"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 15                   # in seconds

[[test]]
name = "divide_by_zero"
harness = false

[[test]]
name = "basic_panic"
harness = false